@@ -23,6 +23,8 @@ Release 0.19.0 - Unreleased
                should emit a sorted list of tables (Krzysztof Szlapinski via Stack)
    HBASE-884   Double and float converters for Bytes class
                (Doğacan Güney via Stack)
+   HBASE-908   Add approximate counting to CountingBloomFilter
+               (Andrzej Bialecki via Stack)
 
   NEW FEATURES
    HBASE-875   Use MurmurHash instead of JenkinsHash [in bloomfilters]
